[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
alloy-chains = "0.1.3"
foundry-block-explorers = "0.1.1"
gloo-timers = "0.3.0"
js-sys = "0.3.65"
ruint = "1.11.1"
serde = "1.0.193"
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = {version = "0.2.88", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.38"
web-sys = {version="0.3.65", features = ["Window", "Event", "EventTarget"]}
yew = { version="0.20", features=["csr"] }
serde_json = "1.0.108"

alloy-web = { git="https://github.com/DrHongos/alloy-web" }
#path = "../../alloy-web"

# alloy crates
alloy-providers = { git = "https://github.com/alloy-rs/alloy" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", features = ["eip712"]}

# core crates
alloy-dyn-abi = { version = "0.5.2", features = ["eip712"] }
alloy-sol-types = { version = "0.5.2", features = ["eip712-serde"] }
alloy-sol-macro = { version = "0.5.2" }
alloy-primitives = { version = "0.5.2" }
