[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
foundry-block-explorers = "0.2"
gloo-timers = "0.3.0"
js-sys = "0.3.65"
ruint = {version = "1.11.1", features = ["num-traits"]}
serde = "1.0.193"
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = {version = "0.2.88", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.38"
web-sys = {version="0.3.65", features = ["Window", "Event", "EventTarget", "Storage", "HtmlButtonElement"]}
yew = { version="0.21", features=["csr"] }
serde_json = "1.0.108"

alloy-web = { git = "https://github.com/DrHongos/alloy-web" }
#{ path = "../../alloy-web" }
alloy-chains = "0.1.5"
# alloy crates
alloy-providers = { git = "https://github.com/alloy-rs/alloy" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", features = ["eip712"]}

# core crates
alloy-dyn-abi = { version = "0.5.4", features = ["eip712"] }
alloy-sol-types = { version = "0.5.4", features = ["eip712-serde"] }
alloy-sol-macro = { version = "0.5.4" }
alloy-primitives = { version = "0.5.4" }
strum = "0.25.0"
alloy-json-abi = "0.6.0"
